# gamejam-1-enseirb

./: CMakeLists.txt  a.out  gamejam.c  gamejam.c~  main.cpp
Classes/: player.cpp  player.h  position.cpp
Classes/Declarations/: bonus.h  controller.h  enemies.h  model.h  movableElement.h  obstacle.h  player.h  position.h  view.h
Classes/Definitions/: bonus.cpp  controller.cpp  enemies.cpp  model.cpp  movableElement.cpp  obstacle.cpp  player.cpp  position.cpp  view.cpp
